# my-vagrant-box

./: .gitignore  README.md  Vagrantfile  Vagrantfile-fedora  ansible.cfg  debian.yml  network.xml  provision.yml  pyproject.toml  redhat.yml  renovate.json  requirements.in  requirements.txt  requirements.yml
scripts/: arch.sh  fedora36.sh  install-ansible.sh  ubuntu2204.sh
test/: provision-playbook.yml
test-vagrant/: Vagrantfile
test/debian/: Vagrantfile
test/fedora/: Vagrantfile
test/ubuntu/: Vagrantfile
