[tool.poetry]
name = "my-vagrant-box"
version = "0.1.0"
description = ""
authors = ["Stephane Robert <stephane.robert@fr.clara.net>"]
readme = "README.md"
packages = [{include = "my_vagrant_box"}]

[tool.poetry.dependencies]
python = "^3.10"
ansible = ">=6.1.0"
ansible-builder = ">=1.1.0"
ansible-lint = ">=6.4.0"
ansible-navigator = ">=2.1.0"
ansible-runner = ">=2.2.1"
debugpy = ">=1.6.3"
google-auth = ">=2.9.1"
jc = ">=1.21.1"
lastversion = ">=2.4.5"
molecule = ">=4.0.1"
molecule-docker = ">=1.1.0"
pytest-testinfra = ">=6.8.0"
pipx = ">=1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
